--- a/style.css
+++ b/style.css
@@ -3,3 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+body
+{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 20px;
+}
+.game
+{
+    width: 100%;
+    height: 50vh;
+    display: grid;
+    grid-template-columns: 3;
+    background-color: black;
+}
